2.12.9.5 release
Still workign through bugs from pulling ahead the target SDK.  Major
changes to device specific location. Also cleaned up lint.